completed the functionalities

--- a/app.json
+++ b/app.json
@@ -1,11 +1,10 @@
 {
   "expo": {
-    "name": "News-App-React-Native",
-    "slug": "News-App-React-Native",
+    "name": "React-Native-News-App",
+    "slug": "React-Native-News-App",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
@@ -24,7 +23,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.roadsidecoder.inshortsclone"
     },
     "web": {
       "favicon": "./assets/favicon.png"
