--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~46.0.16",
-    "expo-status-bar": "~1.4.0",
-    "react": "18.0.0",
-    "react-native": "0.69.6"
+    "@expo/vector-icons": "^12.0.5",
+    "axios": "^0.21.1",
+    "expo": "~42.0.0",
+    "expo-status-bar": "~1.0.4",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-pager-view": "5.0.12",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-tab-view": "^3.0.1",
+    "react-native-web": "^0.18.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.9.0"
   },
   "private": true
 }
