--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "axios": "^0.21.1",
     "expo": "~42.0.0",
     "expo-status-bar": "~1.0.4",
+    "expo-updates": "~0.8.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native": "^0.70.4",
     "react-native-pager-view": "5.0.12",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-tab-view": "^3.0.1",
