--- a/app.json
+++ b/app.json
@@ -24,7 +24,7 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       },
-      "package": "com.roadsidecoder.inshortsclone"
+      "package": "com.thaminduchankana.reactnativenewsapp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
