--- a/package.json
+++ b/package.json
@@ -9,21 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^12.0.5",
-    "axios": "^0.21.1",
-    "expo": "~42.0.0",
-    "expo-status-bar": "~1.0.4",
-    "expo-updates": "~0.8.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "^0.70.4",
-    "react-native-pager-view": "5.0.12",
+    "@expo/vector-icons": "^13.0.0",
+    "axios": "^1.1.3",
+    "deprecated-react-native-prop-types": "^2.3.0",
+    "expo": "~46.0.16",
+    "expo-status-bar": "~1.4.0",
+    "expo-updates": "^0.14.6",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-native": "0.69.6",
+    "react-native-pager-view": "5.4.24",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-tab-view": "^3.0.1",
+    "react-native-tab-view": "^3.3.0",
     "react-native-web": "^0.18.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.12.9"
   },
   "private": true
 }
